WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302563
[MathML] Render empty <msqrt> radicals correctly instead of skipping paint due to firstChild()
https://bugs.webkit.org/show_bug.cgi?id=302563
Summary
[MathML] Render empty <msqrt> radicals correctly instead of skipping paint du...
Ahmad Saleem
Reported
2025-11-14 22:51:42 PST
ssia - we are failing WPT because of this but I cannot enable test since there are still rendering differences.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-14 22:51:49 PST
<
rdar://problem/164776629
>
Ahmad Saleem
Comment 2
2025-11-14 22:55:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53983
EWS
Comment 3
2025-11-17 13:24:43 PST
Committed
303134@main
(db88908da038): <
https://commits.webkit.org/303134@main
> Reviewed commits have been landed. Closing PR #53983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug